--- a/index.html
+++ b/index.html
@@ -1,10 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>StreetCafe - Affordable Coffee, Premium Vibes</title>
-  <meta name="description" content="StreetCafe is a cozy neighborhood cafe with handcrafted coffee and friendly prices. Your perfect hangout spot." />
+  <title>StreetCafe Bogor - Affordable Coffee, Premium Vibes</title>
+  <meta name="description" content="StreetCafe Bogor adalah cafe nyaman di Bogor dengan kopi handcrafted dan harga ramah. Tempat hangout favorit di Bogor, Jawa Barat." />
+  <meta name="keywords" content="cafe bogor, coffee shop bogor, streetcafe bogor, tempat nongkrong bogor, kopi bogor" />
+  <meta name="robots" content="index, follow, max-image-preview:large" />
+  <link rel="canonical" href="https://oman21-skanic.github.io/StreetCafe/" />
+  <meta property="og:title" content="StreetCafe Bogor - Affordable Coffee, Premium Vibes" />
+  <meta property="og:description" content="Cafe nyaman di Bogor dengan kopi handcrafted dan harga ramah. Kunjungi StreetCafe Bogor sekarang." />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="id_ID" />
+  <meta property="og:url" content="https://oman21-skanic.github.io/StreetCafe/" />
+  <meta property="og:site_name" content="StreetCafe Bogor" />
+  <meta property="og:image" content="https://images.unsplash.com/photo-1495474472287-4d71bcdd2085?q=80&w=1400&auto=format&fit=crop" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="StreetCafe Bogor - Affordable Coffee, Premium Vibes" />
+  <meta name="twitter:description" content="Cafe nyaman di Bogor dengan kopi handcrafted dan harga ramah." />
+  <meta name="twitter:image" content="https://images.unsplash.com/photo-1495474472287-4d71bcdd2085?q=80&w=1400&auto=format&fit=crop" />
+  <meta name="geo.region" content="ID-JB" />
+  <meta name="geo.placename" content="Bogor" />
+  <meta name="geo.position" content="-6.596629;106.805934" />
+  <meta name="ICBM" content="-6.596629, 106.805934" />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CafeOrCoffeeShop",
+    "name": "StreetCafe Bogor",
+    "image": "https://images.unsplash.com/photo-1495474472287-4d71bcdd2085?q=80&w=1400&auto=format&fit=crop",
+    "url": "https://oman21-skanic.github.io/StreetCafe/",
+    "telephone": "+62 812 3456 7890",
+    "email": "hello@streetcafe.id",
+    "priceRange": "IDR 18K - IDR 32K",
+    "servesCuisine": "Coffee, Snacks",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Taman Kencana",
+      "addressLocality": "Bogor",
+      "addressRegion": "Jawa Barat",
+      "postalCode": "16128",
+      "addressCountry": "ID"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": -6.596629,
+      "longitude": 106.805934
+    },
+    "openingHoursSpecification": [
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday"
+        ],
+        "opens": "08:00",
+        "closes": "22:00"
+      },
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "09:00",
+        "closes": "23:00"
+      }
+    ],
+    "sameAs": [
+      "https://instagram.com/streetcafe"
+    ]
+  }
+  </script>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -46,8 +117,8 @@
     <div class="hero-particles" id="heroParticles"></div>
     <div class="container hero-content">
       <span class="hero-badge fade-in"><i class="fa-solid fa-star"></i> Since 2020</span>
-      <h1 class="hero-title fade-in">Affordable Coffee,<br /><span>Premium Vibes</span></h1>
-      <p class="hero-sub fade-in">A cozy hangout with handcrafted coffee and friendly prices.<br />Your neighborhood spot for comfort and good conversations.</p>
+      <h1 class="hero-title fade-in">StreetCafe Bogor:<br /><span>Affordable Coffee, Premium Vibes</span></h1>
+      <p class="hero-sub fade-in">A cozy hangout with handcrafted coffee and friendly prices in Bogor.<br />Your neighborhood spot for comfort and good conversations.</p>
       <div class="hero-buttons fade-in">
         <a href="#menu" class="btn btn-primary"><i class="fa-solid fa-coffee"></i> View Menu</a>
         <a href="#location" class="btn btn-outline"><i class="fa-solid fa-location-dot"></i> Visit Us</a>
@@ -87,7 +158,7 @@
         <div class="about-text fade-in">
           <span class="section-tag"><i class="fa-solid fa-heart"></i> About Us</span>
           <h2 class="section-title">Where Every Cup <br />Tells a <span>Story</span></h2>
-          <p>StreetCafe is a neighborhood cafe designed for comfort, good conversations, and honest coffee. Born from a passion for bringing people together, we craft every cup with care and serve it at prices everyone can enjoy.</p>
+          <p>StreetCafe Bogor is a neighborhood cafe designed for comfort, good conversations, and honest coffee. Born from a passion for bringing people together, we craft every cup with care and serve it at prices everyone can enjoy.</p>
           <p>We believe great coffee shouldn't come with a premium price tag. That's why we source quality beans, roast them locally, and keep our prices friendly — because good vibes should be affordable.</p>
           <div class="about-features">
             <div class="about-feature">
@@ -240,7 +311,7 @@
       <div class="section-header fade-in">
         <span class="section-tag"><i class="fa-solid fa-map-pin"></i> Find Us</span>
         <h2 class="section-title">Visit <span>StreetCafe</span></h2>
-        <p class="section-desc">We're always ready to welcome you. Drop by anytime!</p>
+        <p class="section-desc">We're always ready to welcome you in Bogor. Drop by anytime!</p>
       </div>
       <div class="location-grid">
         <div class="location-info fade-in">
@@ -248,7 +319,7 @@
             <div class="info-icon"><i class="fa-solid fa-location-dot"></i></div>
             <div>
               <h4>Address</h4>
-              <p>Kopi Nego<br />Bogor, Jawa Barat</p>
+              <p>Taman Kencana<br />Bogor, Jawa Barat</p>
             </div>
           </div>
           <div class="info-card">
@@ -280,12 +351,12 @@
               title="StreetCafe Location"
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
-              src="https://www.google.com/maps?q=Kopi%20Nego&ll=-6.6340807,106.7853227&z=17&output=embed">
+              src="https://www.google.com/maps?q=Taman%20Kencana%20Bogor&ll=-6.596629,106.805934&z=16&output=embed">
             </iframe>
             <div class="map-caption">
               <i class="fa-solid fa-map-location-dot"></i>
               <div>
-                <span>Kopi Nego</span>
+                <span>Taman Kencana</span>
                 <p>Bogor, Jawa Barat</p>
               </div>
             </div>
@@ -353,7 +424,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2026 StreetCafe. All rights reserved. Made with <i class="fa-solid fa-heart"></i> in Bandung.</p>
+        <p>&copy; 2026 StreetCafe. All rights reserved. Made with <i class="fa-solid fa-heart"></i> in Bogor.</p>
       </div>
     </div>
   </footer>
